add support for snapshots (raw + base64) #130
also tweaked the logging as bit more
