# machinery/docs/swagger.json
@@ -21,7 +21,7 @@
             "post": {
                 "description": "Will return the ONVIF capabilities for the specific camera.",
                 "tags": [
-                    "camera"
+                    "onvif"
                 ],
                 "summary": "Will return the ONVIF capabilities for the specific camera.",
                 "operationId": "camera-onvif-capabilities",
@@ -50,7 +50,7 @@
             "post": {
                 "description": "Will activate the desired ONVIF preset.",
                 "tags": [
-                    "camera"
+                    "onvif"
                 ],
                 "summary": "Will activate the desired ONVIF preset.",
                 "operationId": "camera-onvif-gotopreset",
@@ -84,7 +84,7 @@
                 ],
                 "description": "Will get the digital inputs from the ONVIF device.",
                 "tags": [
-                    "camera"
+                    "onvif"
                 ],
                 "summary": "Will get the digital inputs from the ONVIF device.",
                 "operationId": "get-digital-inputs",
@@ -113,7 +113,7 @@
             "post": {
                 "description": "Try to login into ONVIF supported camera.",
                 "tags": [
-                    "camera"
+                    "onvif"
                 ],
                 "summary": "Try to login into ONVIF supported camera.",
                 "operationId": "camera-onvif-login",
@@ -147,7 +147,7 @@
                 ],
                 "description": "Will get the relay outputs from the ONVIF device.",
                 "tags": [
-                    "camera"
+                    "onvif"
                 ],
                 "summary": "Will get the relay outputs from the ONVIF device.",
                 "operationId": "get-relay-outputs",
@@ -181,7 +181,7 @@
                 ],
                 "description": "Will trigger the relay output from the ONVIF device.",
                 "tags": [
-                    "camera"
+                    "onvif"
                 ],
                 "summary": "Will trigger the relay output from the ONVIF device.",
                 "operationId": "trigger-relay-output",
@@ -217,7 +217,7 @@
             "post": {
                 "description": "Panning or/and tilting the camera using a direction (x,y).",
                 "tags": [
-                    "camera"
+                    "onvif"
                 ],
                 "summary": "Panning or/and tilting the camera.",
                 "operationId": "camera-onvif-pantilt",
@@ -246,7 +246,7 @@
             "post": {
                 "description": "Will return the ONVIF presets for the specific camera.",
                 "tags": [
-                    "camera"
+                    "onvif"
                 ],
                 "summary": "Will return the ONVIF presets for the specific camera.",
                 "operationId": "camera-onvif-presets",
@@ -275,7 +275,7 @@
             "post": {
                 "description": "Zooming in or out the camera.",
                 "tags": [
-                    "camera"
+                    "onvif"
                 ],
                 "summary": "Zooming in or out the camera.",
                 "operationId": "camera-onvif-zoom",
@@ -332,6 +332,36 @@
                         "schema": {
                             "$ref": "#/definitions/models.APIResponse"
                         }
+                    }
+                }
+            }
+        },
+        "/api/camera/snapshot/base64": {
+            "get": {
+                "description": "Get a snapshot from the camera in base64.",
+                "tags": [
+                    "camera"
+                ],
+                "summary": "Get a snapshot from the camera in base64.",
+                "operationId": "snapshot-base64",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/api/camera/snapshot/jpeg": {
+            "get": {
+                "description": "Get a snapshot from the camera in jpeg format.",
+                "tags": [
+                    "camera"
+                ],
+                "summary": "Get a snapshot from the camera in jpeg format.",
+                "operationId": "snapshot-jpeg",
+                "responses": {
+                    "200": {
+                        "description": ""
                     }
                 }
             }
@@ -398,7 +428,7 @@
             "get": {
                 "description": "Get the current configuration.",
                 "tags": [
-                    "general"
+                    "config"
                 ],
                 "summary": "Get the current configuration.",
                 "operationId": "config",
@@ -411,7 +441,7 @@
             "post": {
                 "description": "Update the current configuration.",
                 "tags": [
-                    "general"
+                    "config"
                 ],
                 "summary": "Update the current configuration.",
                 "operationId": "config",
@@ -472,7 +502,7 @@
                 ],
                 "description": "Will verify the hub connectivity.",
                 "tags": [
-                    "general"
+                    "persistence"
                 ],
                 "summary": "Will verify the hub connectivity.",
                 "operationId": "verify-hub",
@@ -561,7 +591,7 @@
                 ],
                 "description": "Will verify the ONVIF connectivity.",
                 "tags": [
-                    "general"
+                    "onvif"
                 ],
                 "summary": "Will verify the ONVIF connectivity.",
                 "operationId": "verify-onvif",
@@ -595,7 +625,7 @@
                 ],
                 "description": "Will verify the persistence.",
                 "tags": [
-                    "general"
+                    "persistence"
                 ],
                 "summary": "Will verify the persistence.",
                 "operationId": "verify-persistence",
